--- a/src/app/components/AboutService.module.css
+++ b/src/app/components/AboutService.module.css
@@ -68,12 +68,10 @@
 }
 
 @media (max-width: 768px) {
-  .aboutService {
-    padding: 80px 0;
-  }
+
   
   .container {
-    padding: 0 20px;
+    padding: 0 ;
   }
   
   .title {
@@ -84,6 +82,10 @@
   .cards {
     grid-template-columns: 1fr;
     gap: 32px;
+  }
+
+  .card{
+    height: 222px;
   }
   
   .cardTitle {
