--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -71,12 +71,12 @@
 
 @media (max-width: 768px) {
   .footer {
-    margin: 20px;
-    padding: 30px 0 15px;
+    margin: 0;
+    padding: 30px;
   }
   
   .container {
-    padding: 0 20px;
+    padding: 0 0;
   }
   
   .contactText {
