--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,5 +1,4 @@
 .header {
-
   padding: 30px 0;
   font-family: var(--font-primary);
 }
@@ -7,7 +6,6 @@
 .container {
   max-width: 1360px;
   margin: 0 auto;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -109,7 +107,7 @@
   font: 500 16px / 150% var(--font-primary);
   color: #fff;
   padding: 10px 16px;
-  width: 77px;
+  width: fit-content;
   height: 44px;
   background: #253168;
   border-radius: 8px;
@@ -138,7 +136,8 @@
   background: white;
   color: #253168;
   border: 1px solid #253168;
-  width: 77px;
+  width: fit-content;
+  padding: 0 16px;
   height: 44px;
 }
 
@@ -146,28 +145,17 @@
   background: #f8f9fa;
 }
 
-
 @media (max-width: 768px) {
-  .container {
-    padding: 0 20px;
-  }
-  
   .nav {
-    gap: 15px;
+    display: none;
   }
   
-  .registerBtn,
-  .loginBtn {
-    padding: 8px 16px;
-    font-size: 13px;
+
+}
+
+@media (max-width: 480px) {
+  .logo img {
+    width: 100px;
+    height: 33px;
   }
-  
-  .languageDropdown {
-    right: -10px;
-    min-width: 120px;
-  }
-  
-  .languageOption span {
-    font-size: 13px;
-  }
-} 
+}
