--- a/src/app/components/Hero.module.css
+++ b/src/app/components/Hero.module.css
@@ -10,6 +10,7 @@
   align-items: flex-start;
   max-width: 1360px;
   min-height: 416px;
+  z-index: 1001;
   margin: 0 auto;
   display: flex
 ;
@@ -66,7 +67,7 @@
 
 @media (max-width: 1024px) {
   .content {
-    padding: 0 20px;
+    padding:  20px;
   }
   
   .title {
@@ -84,13 +85,19 @@
   .title {
     font-size: 36px;
   }
+
+  .formContainer {
+    bottom: -270px;
+  }
   
   .subtitle {
     font-size: 28px;
+
   }
   
   .description {
     font-size: 18px;
+    width: 100%;
   }
   
 
