--- a/src/app/components/HowItWorks.module.css
+++ b/src/app/components/HowItWorks.module.css
@@ -150,8 +150,12 @@
 
 @media (max-width: 768px) {
   .container {
-    padding: 30px 20px;
+    padding: 30px 0;
     margin: 0 10px;
+  }
+
+  .howItWorks{
+    padding:  0;
   }
 
   .title {
