--- a/src/app/components/AboutService.module.css
+++ b/src/app/components/AboutService.module.css
@@ -1,6 +1,6 @@
 .aboutService {
   background: white;
-  padding: 180px 0 0;  
+  padding: 80px 0 0;  
 }
 
 .container {
@@ -9,11 +9,17 @@
   padding: 0 40px;
 }
 
+
 .title {
     font: 600 32px var(--font-primary); 
     text-align: center;
     color: #333;
   margin-bottom: 40px;
+}
+
+.cards img{
+  width: 100%;
+  height: 100%;
 }
 
 .cards {
@@ -33,8 +39,8 @@
 .icon {
   margin-bottom: 8px;
   display: flex;
-  height: 56px;
-  width: 56px;
+  height: 46px;
+  width: 46px;
   align-items: center;
   justify-content: center;
 }
@@ -73,10 +79,19 @@
   .container {
     padding: 0 ;
   }
+
+  .aboutService {
+    padding: 320px 0 0;
+  }
+
+  .cards .icon{
+    width:36px;
+    height: 36px;
+  }
   
   .title {
-    font-size: 36px;
-    margin-bottom: 60px;
+    font-size: 24px;
+    margin-bottom: 20px;
   }
   
   .cards {
@@ -90,5 +105,9 @@
   
   .cardTitle {
     font-size: 20px;
+  }
+
+  .cardDescription {
+    font-size: 16px;
   }
 } 
