--- a/src/app/components/Hero.module.css
+++ b/src/app/components/Hero.module.css
@@ -82,8 +82,16 @@
 }
 
 @media (max-width: 768px) {
+  .hero {
+    min-height: 300px;
+  }
+
+  .content {
+    gap: 40px;
+  }
+
   .title {
-    font-size: 36px;
+    font-size: 24px;
   }
 
   .formContainer {
@@ -91,14 +99,11 @@
   }
   
   .subtitle {
-    font-size: 28px;
-
+    font-size: 20px;
   }
   
   .description {
-    font-size: 18px;
+    font-size: 16px;
     width: 100%;
   }
-  
-
 }
