--- a/src/app/components/HowItWorks.module.css
+++ b/src/app/components/HowItWorks.module.css
@@ -1,6 +1,6 @@
 .howItWorks {
 
-  padding: 40px 20px;
+  padding: 80px 0 0;
   color: #333;
 }
 
@@ -9,7 +9,7 @@
   margin: 0 auto;
   background: white;
   border-radius: 16px;
-  padding: 40px 30px;
+  padding: 0 30px;
 }
 
 .title {
@@ -79,8 +79,8 @@
 }
 
 .iconImage {
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   object-fit: contain;
   filter: brightness(0) invert(1);
 }
@@ -160,7 +160,15 @@
 
   .title {
     font-size: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+  }
+
+  .timelineTitle {
+    font-size: 20px;
+  }
+
+  .timelineDescription {
+    font-size: 16px;
   }
 
   .timeline::before {
