--- a/src/app/components/Reviews.module.css
+++ b/src/app/components/Reviews.module.css
@@ -1,6 +1,6 @@
 .reviews {
   background: white;
-  padding: 80px 0;
+  padding: 80px 0 0;
 }
 
 .container {
@@ -46,7 +46,7 @@
 
 @media (max-width: 768px) {
   .reviews {
-    padding: 60px 0;
+    padding: 60px 0 0;
   }
   
   .container {
@@ -54,8 +54,8 @@
   }
   
   .title {
-    font-size: 28px;
-    margin-bottom: 30px;
+    font-size: 24px;
+    margin-bottom: 20px;
     padding: 0 20px;
   }
   
@@ -91,12 +91,12 @@
 
 @media (max-width: 480px) {
   .reviews {
-    padding: 40px 0;
+    padding: 40px 0 0;
   }
   
   .title {
     font-size: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
     padding: 0 16px;
   }
   
