--- a/src/app/components/AboutService.module.css
+++ b/src/app/components/AboutService.module.css
@@ -9,12 +9,11 @@
   padding: 0 40px;
 }
 
-
 .title {
-    font: 600 32px var(--font-primary); 
+    font: 600 24px var(--font-primary); 
     text-align: center;
     color: #333;
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 }
 
 .cards img{
@@ -25,41 +24,43 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 32px;
+  gap: 40px;
+  justify-items: center;
 }
 
 .card {
   display: flex;
-  height: 322px;
+  width: 310px;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
+    gap: 24px;
+  padding: 40px 0;
 }
 
 .icon {
-  margin-bottom: 8px;
   display: flex;
-  height: 46px;
-  width: 46px;
-  align-items: center;
+  height: 40px;
+  width: 40px;
+
   justify-content: center;
 }
 
 .cardTitle {
-    font: 600 24px var(--font-primary);
+    font: 600 20px var(--font-primary);
     color: #333;
+
 }
 
 .cardDescription {
     font: 500 16px var(--font-primary);
     color: #333;
-    white-space: pre-line;
+
+    line-height: 1.193;
 }
 
 .cardLink {
     font: 600 16px / 150% var(--font-primary);
     color: #253168;
-    margin-top: auto;
+    text-decoration: none;
 }
 
 .cardLink:hover {
@@ -74,24 +75,22 @@
 }
 
 @media (max-width: 768px) {
-
-  
   .container {
-    padding: 0 ;
+    padding: 0 20px;
   }
-
+  
   .aboutService {
     padding: 320px 0 0;
   }
 
   .cards .icon{
-    width:36px;
-    height: 36px;
+    width: 40px;
+    height: 40px;
   }
   
   .title {
     font-size: 24px;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
   }
   
   .cards {
@@ -100,14 +99,18 @@
   }
 
   .card{
-    height: 222px;
+    width: 100%;
+    max-width: 310px;
+    align-items: center;
+    padding: 0;
   }
-  
+
   .cardTitle {
     font-size: 20px;
   }
 
   .cardDescription {
     font-size: 16px;
+    text-align: center;
   }
 } 
