--- a/src/app/components/Hero.module.css
+++ b/src/app/components/Hero.module.css
@@ -84,6 +84,12 @@
 @media (max-width: 768px) {
   .hero {
     min-height: 300px;
+    border-radius: 20px;
+  }
+
+  
+  .title {
+    text-align: center;
   }
 
   .content {
@@ -106,4 +112,6 @@
     font-size: 16px;
     width: 100%;
   }
+
+  
 }
